--- a/.pipeline/config.yml
+++ b/.pipeline/config.yml
@@ -3,6 +3,7 @@ steps:
     platform: 'CF'
   cloudFoundryDeploy:
     cloudFoundry:
+      deployTool: mtaDeployPlugin
       apiEndpoint: 'https://api.cf.us10.hana.ondemand.com'
       org: '1daaf481trial'
       space: 'dev'
