--- a/.pipeline/config.yml
+++ b/.pipeline/config.yml
@@ -3,7 +3,7 @@ steps:
     platform: 'CF'
   cloudFoundryDeploy:
     cloudFoundry:
-      deployTool: 'mtaDeployPlugin'
+      deployTool: 'cf_native'
       apiEndpoint: 'https://api.cf.us10.hana.ondemand.com'
       org: '1daaf481trial'
       space: 'dev'
